[package]
name = "ckb-metrics-runtime"
version = "0.13.1"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>", "Nervos Core Dev <dev@nervos.org>"]
edition = "2018"

license = "MIT"

description = "A batteries-included metrics library."
repository = "https://github.com/nervosnetwork/metrics"
documentation = "https://docs.rs/metrics"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "histogram", "counter", "gauge"]

[features]
default = ["exporters", "observers"]
exporters = ["metrics-exporter-log", "metrics-exporter-http"]
observers = ["metrics-observer-yaml", "metrics-observer-json", "metrics-observer-prometheus"]

[[bench]]
name = "histogram"
harness = false

[dependencies]
metrics-core = { version = "^0.5" }
metrics-util = { version = "^0.3" }
metrics = { version = "^0.12", features = ["std"] }
arc-swap = "^0.4"
parking_lot = "^0.11"
quanta = "^0.3"
crossbeam-utils = "^0.7"
metrics-exporter-log = { version = "^0.4", optional = true }
metrics-exporter-http = { version = "^0.3", optional = true }
metrics-observer-yaml = { version = "^0.1", optional = true }
metrics-observer-prometheus = { version = "^0.1", optional = true }
metrics-observer-json = { version = "^0.1", optional = true }
atomic-shim = "0.1.0"

[dev-dependencies]
log = "^0.4"
env_logger = "^0.7"
getopts = "^0.2"
hdrhistogram = "^7.1"
criterion = "^0.3"
lazy_static = "^1.3"
tokio = { version = "^0.2", features = ["macros", "rt-core"] }
